fix: vehicle search